# LordOfUltima

./: README.md  contributors.txt
LOU/LordOfUltima/: LordOfUltima.sln
LOU/LordOfUltima/LordOfUltima/: App.xaml  App.xaml.cs  LordOfUltima.csproj
LOU/LordOfUltima/UnitTest/: UnitTest.csproj
Session_4/tp_infographie/tp01-primitives/: inf2705-primitives.sln
Session_4/tp_os/: INF2610-lab1-H15.odt  INF2610-lab3-H15.odt  INF2610-lab4-H15.odt
Session_4/tp_os/build-inf2610-lab4-Desktop_Qt_5_2_1_MinGW_32bit-Debug/: Makefile
Session_4/tp_os/inf2610-lab1-2.1/: .autotools  .cproject  .project  Makefile  Makefile.am  README  config.status  configure.ac  libtool  perf.csv
Session_4/tp_os/inf2610-lab1-2.1/banque/: Makefile
Session_4/tp_os/inf2610-lab1-2.1/chaine/: Makefile  Makefile.am  Makefile.in  bar.c  chaine.c  foo
Session_4/tp_os/inf2610-lab1-2.1/chaine/.deps/: bar.Po  chaine.Po  foo.Po  whoami.Po
Session_4/tp_os/inf2610-lab2-1.5/: .autotools  .cproject  Makefile  Makefile.in  README  config.h  configure.ac  fixperms.sh
Session_4/tp_os/inf2610-lab2-1.5/banque/: banque-all.sh  banque.c  perf.csv
Session_4/tp_os/inf2610-lab2-1.5/interblocage/: Makefile.in  interblocage  interblocage.c
Session_4/tp_os/inf2610-lab2-1.5/interblocage/.deps/: interblocage.Po
Session_4/tp_os/inf2610-lab2-1.5/lexique/: Makefile  Makefile.am  frequency.c  frequency.h  lexique  lexique.c  text-linux
Session_4/tp_os/inf2610-lab2-1.5/lexique/.deps/: frequency.Po  remplissage.Po  token.Po
Session_4/tp_os/inf2610-lab2-1.5/multilock/: Makefile.in  minispinlock.h  multilock  multilock.h  mutex.h  spinlock.h  statistics.c  statistics.h  utils.c  utils.h
Session_4/tp_os/inf2610-lab2-1.5/multilock/.deps/: mutex.Po  spinlock.Po
Session_4/tp_os/inf2610-lab2-1.5/tests/: test-interblocage.sh  test-multilock.sh
Session_4/tp_os/inf2610-lab3-2.2/: Makefile  Makefile.in  aclocal.m4  config.h  configure  fixperms.sh  libtool
Session_4/tp_os/inf2610-lab3-2.2/drmem/: Makefile.am  Makefile.in  drmem  drmem.c  libstack.la  memutil.c  opts.h  stack.c  stack.lo  stack_tp.c
Session_4/tp_os/inf2610-lab3-2.2/drmem/.deps/: drmem.Po  opts.Po  stack.Plo
Session_4/tp_os/inf2610-lab4-2.6/: inf2610-lab4.sln  publish.sh
tp_infographie/tp01-primitives/inf2705-base/: inf2705-base.vcxproj
tp_infographie/tp02-pipeline/: inf2705-pipeline.sln
tp_infographie/tp02-pipeline/inf2705-base/: inf2705-base.vcxproj  main.cpp
tp_infographie/tp3-orbite/inf2705-base/: fctsUtiles.cpp  fctsUtiles.h  main.cpp
tp_infographie/tp5-illumination/inf2705-base/: chargertex.cpp  fctsUtiles.cpp  main.cpp
tp_infographie/tp6-surfaces/inf2705-base/: chargertex.cpp  chargertex.h  float3.h  main.cpp  makefile
tp_infographie/tp6-surfaces/inf2705-base-2/: fctsUtiles.cpp  modifs.txt
tp_os/: INF2610-lab2-H15.odt
tp_os/build-inf2610-lab4-Desktop_Qt_5_2_1_MinGW_32bit-Debug/: Makefile
tp_os/inf2610-lab1-2.1/: INF2610-lab1-H15.odt  Makefile.in  aclocal.m4  config.h  configure  fixperms.sh
tp_os/inf2610-lab2-1.5/: .project  INF2610-lab2-H15.odt  Makefile.am  aclocal.m4  config.h.in  config.status  configure  libtool
tp_os/inf2610-lab2-1.5/multilock/: Makefile  Makefile.am  minispinlock.asm  multilock-all.sh  multilock.c  mutex.c  semrelay.c  semrelay.h  serial.c  serial.h  spinlock.c
tp_os/inf2610-lab2-1.5/multilock/.deps/: multilock.Po  semrelay.Po  serial.Po  statistics.Po  utils.Po
tp_os/inf2610-lab2-1.5/tests/: Makefile  Makefile.am  Makefile.in  test-lexique.sh
tp_os/inf2610-lab3-2.2/: Makefile.am  README  config.h.in  config.status  configure.ac
tp_os/inf2610-lab3-2.2/drmem/: Makefile  libmemutil.la  libmemutil_la-memutil.lo  memutil.h  opts.c  stack_tp.lo  stack_tp_provider.h
tp_os/inf2610-lab3-2.2/drmem/.deps/: libmemutil_la-memutil.Plo  stack_tp.Plo
tp_os/inf2610-lab3-2.2/pagedump/: Makefile.am  Makefile.in  cafe.page
tp_os/inf2610-lab3-2.2/pagedump/.deps/: pagedump.Po
tp_os/inf2610-lab3-2.2/randaddr/: Makefile  dummy.c  randaddr  randaddr.c
tp_os/inf2610-lab3-2.2/randaddr/.deps/: libdummy.Plo
tp_os/inf2610-lab3-2.2/randaddr/.libs/: libdummy.so.0.0.0  lt-dummy
tp_os/inf2610-lab3-2.2/scripts/: Makefile  Makefile.in  experiment.py
tp_os/inf2610-lab3-2.2/segfault/: Makefile  Makefile.am
tp_os/inf2610-lab3-2.2/segfault/.deps/: segfault.Po
tp_os/inf2610-lab4-2.6/: inf2610-lab4.pro  lab4-Systemes.docx
wpf/LordOfUltima/: LordOfUltima.sln
xamarian - Monkey Say/MonkeySay/: MonkeySay.sln
xamarian - Monkey Say/images/: background.xcf
xamarian/MonkeySay/: MonkeySay.sln  MonkeySay.userprefs
(+558 files in other folders)
